tests/typing/should_fail/vardecl.java
package tutu.titi.toto;

class A {
	boolean h;

	public void method1(boolean j) {
		int k = 2;
		k = 3.0;
	}
}
